# parsture

./: .gitignore  Cargo.toml  README.md
examples/: list_rules.rs
src/: cli.rs  main.rs  ops.rs
